--- a/FinalProject.Web/Views/Home/Index.cshtml
+++ b/FinalProject.Web/Views/Home/Index.cshtml
@@ -293,101 +293,101 @@
         <!--Column 1 : Restaurants-->
         <div class="col-md-2 col-sm-6 mb-3">
             <h4>Restaurants</h4>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Barking Dog<span
+            <a href="https://www.barkingdogbelfast.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Barking Dog<span
                     class="tooltip">Belfast</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dirty Onion<span
+            <a href="https://thedirtyonion.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dirty Onion<span
                     class="tooltip">Belfast</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Parador<span
+            <a href="https://www.theparadorinn.co.uk/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Parador<span
                     class="tooltip">Cushendall</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Bull & Ram<span
-                    class="tooltip">Ballymena</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Woollen Mills<span
+            <a href="https://www.thetaste.ie/bull-and-ram-review" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Bull & Ram<span
+                    class="tooltip">Ballynahinch</span></a>
+            <a href="https://www.thewoollenmills.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Woollen Mills<span
                     class="tooltip">Dublin</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dawson Lounge<span
+            <a href="https://dawsonlounge.ie/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dawson Lounge<span
                     class="tooltip">Dublin</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Greenhouse<span
+            <a href="https://www.thetaste.ie/greenhouse-restaurant-dublin" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Greenhouse<span
                     class="tooltip">Dublin</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Happy Pear<span
+            <a href="https://thehappypear.ie/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Happy Pear<span
                     class="tooltip">Greystones</span></a>
         </div>
         <!--Column 2 : Hotels-->
         <div class="col-md-2 col-sm-6 mb-3">
             <h4>Hotels</h4>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Fitzwilliam Hotel<span
+            <a href="https://www.fitzwilliamhotelbelfast.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Fitzwilliam Hotel<span
                     class="tooltip">Belfast</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Merchant Hotek<span
+            <a href="https://www.themerchanthotel.com/?msclkid=84014162c8fa1fc33dbf264f9f210cdf&utm_source=bing&utm_medium=cpc&utm_campaign=Brand%20NI&utm_term=merchants%20hotel%20belfast&utm_content=The%20Merchant%20Hotel" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Merchant Hotel<span
                     class="tooltip">Belfast</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Bushmills Inn Hotel<span
+            <a href="https://www.bushmillsinn.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Bushmills Inn Hotel<span
                     class="tooltip">Bushmills</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Malton Hotel<span
+            <a href="https://www.greatsouthernkillarney.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Malton Hotel<span
                     class="tooltip">Killarney</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Castle Hotel<span
+            <a href="https://www.guestreservations.com/ballyseede-castle/booking?msclkid=fb8704a3af2915467941638ef778324e" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Castle Hotel<span
                     class="tooltip">Tralee</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Ashford Castle<span
+            <a href="https://ashfordcastle.com/?msclkid=403cc8779185194ee55aaf5ac903bd17&utm_source=bing&utm_medium=cpc&utm_campaign=Ashford%20Castle%20-%20Brand%20-%20All%20Visitors%20-%20UK%20-%20EN%20%28updated%29&utm_term=ashford%20castle%20%2B%20cong&utm_content=Ashford%20Castle" target="_blank" rel="noopener noreferrer" class="restaurant-link">Ashford Castle<span
                     class="tooltip">Cong</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Merchant House<span
+            <a href="https://www.themerchanthouse.ie/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Merchant House<span
                     class="tooltip">Dublin</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Glenside Hotel<span
+            <a href="https://www.glenviewhotel.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Glenview Hotel<span
                     class="tooltip">Wicklow</span></a>
         </div>
         <!--Column 3 : Activities-->
         <div class="col-md-2 col-sm-6 mb-3">
             <h4>Activities</h4>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Belfast Zoo<span
+            <a href="https://www.belfastcity.gov.uk/zoo/home" target="_blank" rel="noopener noreferrer" class="restaurant-link">Belfast Zoo<span
                     class="tooltip">Belfast</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Giant's Causeway<span
+            <a href="https://www.nationaltrust.org.uk/visit/northern-ireland/giants-causeway" target="_blank" rel="noopener noreferrer" class="restaurant-link">Giant's Causeway<span
                     class="tooltip">Antrim</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Dublin's Phoenix Park<span
+            <a href="https://www.phoenixpark.ie/" target="_blank" rel="noopener noreferrer" class="restaurant-link">Dublin's Phoenix Park<span
                     class="tooltip">Dublin</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Glendalough National Park<span
+            <a href="https://www.nationalparks.ie/wicklow/" target="_blank" rel="noopener noreferrer" class="restaurant-link">Glendalough National Park<span
                     class="tooltip">Wicklow</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Carrick-a-Reed Rope Bridge<span
+            <a href="https://www.nationaltrust.org.uk/visit/northern-ireland/carrick-a-rede?awc=3795_1731025407_fa00873701fb2182729b094e6eb86588&campid=Affiliates_Central_Mem_AWIN_Standard&aff=271445" target="_blank" rel="noopener noreferrer" class="restaurant-link">Carrick-a-Rede Rope Bridge<span
                     class="tooltip">Antrim</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Ballygally Castle<span
+            <a href="https://www.ballygallycastlehotel.com/?msclkid=b12654fea6a2145c301533d3fcaffd25&utm_source=bing&utm_medium=cpc&utm_campaign=Ballygally%20%3E%20NI%20%3E%20Brand&utm_term=ballygally%20castle&utm_content=Ballygally%20Castle%20Hotel" target="_blank" rel="noopener noreferrer" class="restaurant-link">Ballygally Castle<span
                     class="tooltip">Antrim</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Strandhill Surf School<span
+            <a href="https://www.strandhillsurfschool.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Strandhill Surf School<span
                     class="tooltip">Strandhill</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Wildlife Safari<span
+            <a href="https://www.secretvalley.ie/" target="_blank" rel="noopener noreferrer" class="restaurant-link">Wildlife Safari<span
                     class="tooltip">Wexford Wildfowl Reserve</span></a>
         </div>
         <!--Column 4 : Dog Parks-->
         <div class="col-md-2 col-sm-6 mb-3">
             <h4>Dog Parks</h4>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Wild River Dog Park<span
+            <a href="https://www.wildriverdogpark.co.uk/" target="_blank" rel="noopener noreferrer" class="restaurant-link">Wild River Dog Park<span
                     class="tooltip">Ballynahinch</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Bark Park<span
+            <a href="https://www.barkparkwoodlands.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">Bark Park<span
                     class="tooltip">Lisburn</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dog Park<span
+            <a href="https://www.lisburncastlereagh.gov.uk/news" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dog Park<span
                     class="tooltip">Moira Demesne</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Happy Dogs Playground<span
-                    class="tooltip">Lurgan</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Dublin Dog Park<span
+            <a href="https://thedogbark.co.uk/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dog Bark<span
+                    class="tooltip">Craigavon</span></a>
+            <a href="https://dublin-5-du.irelands-advisor.com/dublin-balloons/" target="_blank" rel="noopener noreferrer" class="restaurant-link">Dublin Dog Park<span
                     class="tooltip">Dublin</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Woof Dog Park<span
+            <a href="https://www.woofpark.co.uk/" target="_blank" rel="noopener noreferrer" class="restaurant-link">Woof Dog Park<span
                     class="tooltip">Ashbourne</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Doggy Daycare and Training
-                Centre<span class="tooltip">Cork</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">Paw Park<span
+            <a href="https://www.unleashedni.co.uk/" target="_blank" rel="noopener noreferrer" class="restaurant-link">Unleashed
+                Centre<span class="tooltip">Lurgan</span></a>
+            <a href="https://thedogpaddock.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dog Paddock<span
                     class="tooltip">Belfast</span></a>
         </div>
         <!--Column 5 : Pubs-->
         <div class="col-md-2 col-sm-6 mb-3">
             <h4>Pubs</h4>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The John Hewitt<span
+            <a href="https://boundarybrewing.coop/pages/the-john-hewitt" target="_blank" rel="noopener noreferrer" class="restaurant-link">The John Hewitt<span
                     class="tooltip">Belfast</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Muddler's Club<span
+            <a href="https://themuddlersclubbelfast.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Muddler's Club<span
                     class="tooltip">Belfast</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dog House<span
+            <a href="https://www.doghouse.pub/our-highlights/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Dog House<span
                     class="tooltip">Derry</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Royal Oak<span
+            <a href="https://www.killarneyroyal.ie/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Royal Oak<span
                     class="tooltip">Killarney</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Snug Bar<span
+            <a href="https://www.facebook.com/TheSnugBar/?_rdc=1&_rdr" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Snug Bar<span
                     class="tooltip">Ennis</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Porterhouse<span
+            <a href="https://thetemplebarpub.com/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Porterhouse<span
                     class="tooltip">Dublin</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Oar House<span
+            <a href="https://www.facebook.com/groups/435489683311826/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Oar House<span
                     class="tooltip">Kinsale</span></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Fiddler's Elbow<span
+            <a href="https://www.facebook.com/pages/Fiddlers%20Elbow%20Pub%20and%20Bistro/317593111633257/" target="_blank" rel="noopener noreferrer" class="restaurant-link">The Fiddler's Elbow<span
                     class="tooltip">Belfast</span></a>
         </div>
     </div>
