--- a/FinalProject.Web/Views/Home/Privacy.cshtml
+++ b/FinalProject.Web/Views/Home/Privacy.cshtml
@@ -1,6 +1,10 @@
 ﻿<div class="privacy-policy">
-    <div class="content-wrapper">
-        <h1 class="text-center">Woof & Wander Privacy Policy</h1>
+    <div class="privacy-banner">
+        <div class="overlay">
+            <h1 class="banner-title text-center">Woof & Wander Privacy Policy</h1>
+            <p class="banner-subtitle text-center">Your privacy matters to us. Read on to understand how we protect your
+                information.</p>
+        </div>
     </div>
 
     <!-- divider for sections-->
