Added breeds section to recommendations dropdown and changed/ added banners for each page

--- a/FinalProject.Web/Views/Home/About.cshtml
+++ b/FinalProject.Web/Views/Home/About.cshtml
@@ -1,10 +1,6 @@
 ﻿<div class="about-us">
-    <div class="about-banner">
-        <div class="overlay">
-            <h1 class="banner-title text-center">About Woof & Wander</h1>
-            <p class="banner-subtitle text-center">Bringing dog lovers together across Northern Ireland and Ireland</p>
-        </div>
-    </div>
+    <!-- woof and wag banner -->
+    <img src="~/images/banners/AboutUs.svg" class="banner-full-width img-fluid" alt="About Us banner">
 
     <!-- Divider for sections -->
     <hr class="section-divider">
