--- a/FinalProject.Web/Views/Home/Index.cshtml
+++ b/FinalProject.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 <!-- woof and wag banner -->
-<div class="home-banner"></div>
+<img src="~/images/banners/Welcome.svg" class="banner-full-width img-fluid" alt="Welcome banner">
 
 
 <!-- card is only visible when authorised -->
