--- a/FinalProject.Web/Views/Home/Privacy.cshtml
+++ b/FinalProject.Web/Views/Home/Privacy.cshtml
@@ -1,11 +1,6 @@
 ﻿<div class="privacy-policy">
-    <div class="privacy-banner">
-        <div class="overlay">
-            <h1 class="banner-title text-center">Woof & Wander Privacy Policy</h1>
-            <p class="banner-subtitle text-center">Your privacy matters to us. Read on to understand how we protect your
-                information.</p>
-        </div>
-    </div>
+    <!-- woof and wag banner -->
+    <img src="~/images/banners/Privacy.svg" class="banner-full-width img-fluid" alt="Privacy Policy banner">
 
     <!-- divider for sections-->
     <hr class="section-divider">
