--- a/FinalProject.Web/Views/Home/Recipes.cshtml
+++ b/FinalProject.Web/Views/Home/Recipes.cshtml
@@ -1,6 +1,6 @@
+<img src="~/images/banners/Recipe.svg" class="banner-full-width img-fluid" alt="Recipes banner">
 <div class="container recipe-intro mt-5">
-    <img src="~/images/logo/Logo.jpg" alt="Woof & Wander Logo" class="recommendations-logo-image mb-3">
-    <h2 class="text-center">Homemade Dog Treats & Recipes</h2>
+    <h3>Benefits to Homemade Dog Treats</h3>
     <p class="text-center">
         Giving your dog a taste of home-cooked goodness is not only a fun way to show them love but also has incredible health benefits. When you prepare meals and treats for your furry friend, you know exactly what's going into their food—no artificial preservatives, fillers, or questionable ingredients. Home-cooked recipes allow you to choose fresher, higher-quality ingredients tailored to your dog's dietary needs, ensuring they're getting optimal nutrition in every bite.
     </p>
