--- a/FinalProject.Web/Views/Home/Training.cshtml
+++ b/FinalProject.Web/Views/Home/Training.cshtml
@@ -1,16 +1,5 @@
-<div class="container-fluid hero-section d-flex align-items-center justify-content-center text-center">
-    <div class="container text-background">
-        <h1 class="display-4">Trusted Dog Training Tips</h1>
-        <p class="lead"></p>
-        <div class="input-group w-50 mx-auto">
-            <input type="text" class="form-control" placeholder="Search for tips" aria-label="Search">
-            <button class="btn btn-success" type="button">Find Tips</button>
-        </div>
-    </div>
-    <div class="hero-logo-container">
-        <img src="~/images/logo/Logo.jpg" alt="Woof & Wander Logo" class="hero-logo mb-3">
-    </div>
-</div>
+<!-- woof and wag banner -->
+    <img src="~/images/banners/Training.svg" class="banner-full-width img-fluid" alt="Training banner">
 
 <!-- divider for sections-->
 <hr class="section-divider">
