--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -54,6 +54,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" asp-controller="Home" asp-action="Products">Products</a></li>
+                <li><a class="dropdown-item" asp-controller="Home" asp-action="Breed">Breeds</a></li>
                 <li><a class="dropdown-item" asp-controller="Home" asp-action="Recipes">Recipes</a></li>
                 <li><a class="dropdown-item" asp-controller="Home" asp-action="Training">Training</a></li>
                 <li><a class="dropdown-item" asp-controller="Home" asp-action="Vets">Vets</a></li>
